assignment2/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /Users/quan0402/Desktop/PPL/assignment2/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int_of_float'", "'float_of_int'", "'int_of_string'", 
                     "'string_of_int'", "'float_of_string'", "'string_of_float'", 
                     "'bool_of_string'", "'string_of_bool'", "'printLn'", 
                     "'print'", "'printStrLn'", "'read'", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'Var'", 
                     "'While'", "'True'", "'False'", "'EndDo'", "','", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", "'.'", 
                     "'+'", "'-'", "'*'", "'\\'", "'%'", "'\\%'", "'!'", 
                     "'&&'", "'||'", "'+.'", "'-.'", "'*.'", "'\\.'", "'<='", 
                     "'>='", "'<'", "'>'", "'<=.'", "'>=.'", "'<.'", "'>.'", 
                     "'=/='", "'!='", "'=='", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BODY", "BREAK", "CONTINUE", "DO", "ELSE", 
                      "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "CM", "LP", 
                      "RP", "LB", "RB", "LSB", "RSB", "SM", "COLON", "DOT", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "MOD2", "NOT", 
                      "AND", "OR", "ADDPOINT", "SUBPOINT", "MULPOINT", "DIVPOINT", 
                      "LTE", "GTE", "LT", "GT", "LTEPOINT", "GTEPOINT", 
                      "LTPOINT", "GTPOINT", "NEQPOINT", "NEQ", "EQ", "ASSIGN", 
                      "STRINGLIT", "BOOLINT", "REAL", "DECIMAL", "HEXADECIMAL", 
                      "OCTAL", "ID", "BLOCK_COMMENT", "LINE_COMMENT", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_declaration = 2
    RULE_value_decl = 3
    RULE_postfix_array_exp_for_decl = 4
    RULE_postfix_array_exp_for_call = 5
    RULE_array_assignment = 6
    RULE_array_decl = 7
    RULE_array_nd_decl = 8
    RULE_array_1d_decl = 9
    RULE_func_decl = 10
    RULE_param = 11
    RULE_body = 12
    RULE_func_call = 13
    RULE_arguement = 14
    RULE_int_of_float = 15
    RULE_float_of_int = 16
    RULE_int_of_string = 17
    RULE_string_of_int = 18
    RULE_float_of_string = 19
    RULE_string_of_float = 20
    RULE_bool_of_string = 21
    RULE_string_of_bool = 22
    RULE_statement = 23
    RULE_statement_list = 24
    RULE_array_assign = 25
    RULE_assignment_statement = 26
    RULE_index = 27
    RULE_arithmetic = 28
    RULE_expr = 29
    RULE_expr_cond = 30
    RULE_expr1 = 31
    RULE_expr2 = 32
    RULE_expr3 = 33
    RULE_expr4 = 34
    RULE_operand = 35
    RULE_if_statement = 36
    RULE_if_stmt = 37
    RULE_elseif_stmt = 38
    RULE_else_stmt = 39
    RULE_for_statement = 40
    RULE_while_statement = 41
    RULE_do_while_statement = 42
    RULE_break_statement = 43
    RULE_continue_statement = 44
    RULE_return_statement = 45
    RULE_println = 46
    RULE_printstr = 47
    RULE_printstrln = 48
    RULE_read = 49
    RULE_literals = 50
    RULE_array_lit = 51
    RULE_array1dlit = 52
    RULE_arrayndlit = 53
    RULE_bool_lit = 54
    RULE_intlit = 55

    ruleNames =  [ "program", "var_decl", "declaration", "value_decl", "postfix_array_exp_for_decl", 
                   "postfix_array_exp_for_call", "array_assignment", "array_decl", 
                   "array_nd_decl", "array_1d_decl", "func_decl", "param", 
                   "body", "func_call", "arguement", "int_of_float", "float_of_int", 
                   "int_of_string", "string_of_int", "float_of_string", 
                   "string_of_float", "bool_of_string", "string_of_bool", 
                   "statement", "statement_list", "array_assign", "assignment_statement", 
                   "index", "arithmetic", "expr", "expr_cond", "expr1", 
                   "expr2", "expr3", "expr4", "operand", "if_statement", 
                   "if_stmt", "elseif_stmt", "else_stmt", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "println", 
                   "printstr", "printstrln", "read", "literals", "array_lit", 
                   "array1dlit", "arrayndlit", "bool_lit", "intlit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    BODY=13
    BREAK=14
    CONTINUE=15
    DO=16
    ELSE=17
    ELSEIF=18
    ENDBODY=19
    ENDIF=20
    ENDFOR=21
    ENDWHILE=22
    FOR=23
    FUNCTION=24
    IF=25
    PARAMETER=26
    RETURN=27
    THEN=28
    VAR=29
    WHILE=30
    TRUE=31
    FALSE=32
    ENDDO=33
    CM=34
    LP=35
    RP=36
    LB=37
    RB=38
    LSB=39
    RSB=40
    SM=41
    COLON=42
    DOT=43
    ADD=44
    SUB=45
    MUL=46
    DIV=47
    MOD=48
    MOD2=49
    NOT=50
    AND=51
    OR=52
    ADDPOINT=53
    SUBPOINT=54
    MULPOINT=55
    DIVPOINT=56
    LTE=57
    GTE=58
    LT=59
    GT=60
    LTEPOINT=61
    GTEPOINT=62
    LTPOINT=63
    GTPOINT=64
    NEQPOINT=65
    NEQ=66
    EQ=67
    ASSIGN=68
    STRINGLIT=69
    BOOLINT=70
    REAL=71
    DECIMAL=72
    HEXADECIMAL=73
    OCTAL=74
    ID=75
    BLOCK_COMMENT=76
    LINE_COMMENT=77
    WS=78
    UNCLOSE_STRING=79
    ILLEGAL_ESCAPE=80
    ERROR_CHAR=81
    UNTERMINATED_COMMENT=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION or _la==BKITParser.VAR:
                self.state = 114
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 112
                    self.var_decl()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 113
                    self.func_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclarationContext,i)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(BKITParser.VAR)
            self.state = 122
            self.match(BKITParser.COLON)
            self.state = 123
            self.declaration()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 124
                self.match(BKITParser.CM)
                self.state = 125
                self.declaration()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_decl(self):
            return self.getTypedRuleContext(BKITParser.Value_declContext,0)


        def array_decl(self):
            return self.getTypedRuleContext(BKITParser.Array_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_declaration




    def declaration(self):

        localctx = BKITParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.value_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.array_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_value_decl




    def value_decl(self):

        localctx = BKITParser.Value_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(BKITParser.ID)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 138
                self.match(BKITParser.ASSIGN)
                self.state = 139
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_array_exp_for_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_postfix_array_exp_for_decl




    def postfix_array_exp_for_decl(self):

        localctx = BKITParser.Postfix_array_exp_for_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_postfix_array_exp_for_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(BKITParser.LSB)
            self.state = 143
            self.expr(0)
            self.state = 144
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_array_exp_for_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_postfix_array_exp_for_call




    def postfix_array_exp_for_call(self):

        localctx = BKITParser.Postfix_array_exp_for_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_postfix_array_exp_for_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BKITParser.LSB)
            self.state = 147
            self.expr(0)
            self.state = 148
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_assignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_assignment




    def array_assignment(self):

        localctx = BKITParser.Array_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 150
                self.match(BKITParser.ASSIGN)
                self.state = 151
                self.array_lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_1d_decl(self):
            return self.getTypedRuleContext(BKITParser.Array_1d_declContext,0)


        def array_nd_decl(self):
            return self.getTypedRuleContext(BKITParser.Array_nd_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_decl




    def array_decl(self):

        localctx = BKITParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 154
                self.array_1d_decl()
                pass

            elif la_ == 2:
                self.state = 155
                self.array_nd_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_nd_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array_assignment(self):
            return self.getTypedRuleContext(BKITParser.Array_assignmentContext,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.IndexContext)
            else:
                return self.getTypedRuleContext(BKITParser.IndexContext,i)


        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_nd_decl




    def array_nd_decl(self):

        localctx = BKITParser.Array_nd_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_nd_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(BKITParser.ID)
            self.state = 163 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 159
                self.match(BKITParser.LSB)
                self.state = 160
                self.index()
                self.state = 161
                self.match(BKITParser.RSB)
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSB):
                    break

            self.state = 167
            self.array_assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_1d_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def index(self):
            return self.getTypedRuleContext(BKITParser.IndexContext,0)


        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def array_assignment(self):
            return self.getTypedRuleContext(BKITParser.Array_assignmentContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_1d_decl




    def array_1d_decl(self):

        localctx = BKITParser.Array_1d_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_1d_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(BKITParser.ID)

            self.state = 170
            self.match(BKITParser.LSB)
            self.state = 171
            self.index()
            self.state = 172
            self.match(BKITParser.RSB)

            self.state = 174
            self.array_assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def array_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_declContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def return_statement(self):
            return self.getTypedRuleContext(BKITParser.Return_statementContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(BKITParser.FUNCTION)
            self.state = 177
            self.match(BKITParser.COLON)
            self.state = 178
            self.match(BKITParser.ID)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 179
                self.param()


            self.state = 182
            self.match(BKITParser.BODY)
            self.state = 183
            self.match(BKITParser.COLON)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.T__8) | (1 << BKITParser.T__9) | (1 << BKITParser.T__10) | (1 << BKITParser.T__11) | (1 << BKITParser.BREAK) | (1 << BKITParser.CONTINUE) | (1 << BKITParser.DO) | (1 << BKITParser.FOR) | (1 << BKITParser.IF) | (1 << BKITParser.VAR) | (1 << BKITParser.WHILE))) != 0) or _la==BKITParser.ID:
                self.state = 187
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 184
                    self.var_decl()
                    pass

                elif la_ == 2:
                    self.state = 185
                    self.array_decl()
                    pass

                elif la_ == 3:
                    self.state = 186
                    self.statement()
                    pass


                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.RETURN:
                self.state = 192
                self.return_statement()


            self.state = 195
            self.match(BKITParser.ENDBODY)
            self.state = 196
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)
